[package]
name = "ws_uring"
version = "0.1.0"
edition = "2021"

[dependencies]
io-uring = "0.6.1"
libc = "0.2"
os_socketaddr = "0.2.5"
thiserror = "1.0.63"
url = "2.5.2"
data-encoding = "2.6.0"
rand = "0.8.5"
httparse = "1.9.4"
bytes = "1.6.1"
websocket-codec = "0.5.2"
tokio-util = "0.7.11"

# TODO
[profile.release]
debug = true
