[package]
name = "mio-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mio = { version = "0.8", features = ["os-poll", "net"]}
io-uring = "0.6.1"
rustls = "0.23.11"
webpki-roots = "0.26.3"
libc = "0.2"
os_socketaddr = "0.2.5"

# TODO
[profile.release]
debug = true